# esp-matter

./: .codespellrc  .envrc  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SECURITY_AUDIT_REPORT.md  index.html  install.sh  optimizations.md  patches.md5  pytest.ini  requirements.txt  requirements_idf_v4.4.txt
.github/ISSUE_TEMPLATE/: cert-issue.md
.github/workflows/: docker-image.yml  matter-docker-image.yml  matter-setup-payload.yml  pages.yml  sync_pr_to_gitlab.yml  upload_component.yml  upload_mfg_tool_to_pypi.yaml
components/esp_matter/: CMakeLists.txt  Kconfig  esp_matter_attribute_utils.cpp  esp_matter_cluster.cpp  esp_matter_cluster.h  esp_matter_command.cpp  esp_matter_core.cpp  esp_matter_core.h  esp_matter_endpoint.cpp  esp_matter_endpoint.h  esp_matter_feature.cpp  esp_matter_feature.h
components/esp_matter_bridge/: esp_matter_console_bridge.cpp
docs/: conf_common.py
docs/en/: app_guide.rst  certification.rst  controller.rst  developing.rst  faq.rst  index.rst  introduction.rst  optimizations.rst  production.rst  security.rst  using_chip_tool.rst
examples/: .build-rules.yml  pytest_esp_matter_light.py
examples/light/: README.md  sdkconfig.defaults.esp32c6
examples/light/main/: CMakeLists.txt  app_main.cpp
examples/light_switch/main/: CMakeLists.txt  app_driver.cpp  app_driver.h  app_main.cpp
examples/light_switch/main/box/: box_main.c
examples/light_switch/main/box/app/: app_led.c  app_sr.c  app_sr_handler.c  app_wifi.c
examples/light_switch/main/box/gui/: ui_device_ctrl.c  ui_main.c  ui_main.h  ui_net_config.c
(+43 files in other folders)
